refactor: eliminar auth - dividir layout admin/usuario
